trunk/renamer/src/br/com/renatoccosta/renamer/parser/RenamerParser.g
parser grammar RenamerParser;

options {
    tokenVocab=RenamerLexer;
    output=AST;
}

tokens {
    ELEMENT;
    ATTRIBUTE;
}

@header {
/**
 * Copyright 2009 Renato Couto da Costa
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package br.com.renatoccosta.renamer.parser;
}

document : ( element | PCDATA )+ ;

element
    : ( startTag^
            ( element
			| PCDATA
            )*
            endTag!
        | emptyElement
        )
        
    ;

startTag 
	: TAG_START_OPEN GENERIC_ID attribute* TAG_CLOSE -> ^(ELEMENT GENERIC_ID attribute*)
    ;

attribute 
	: GENERIC_ID ATTR_EQ ATTR_VALUE -> ^(ATTRIBUTE GENERIC_ID ATTR_VALUE) ;

endTag! 
	: TAG_END_OPEN GENERIC_ID TAG_CLOSE;

emptyElement 
	: TAG_START_OPEN GENERIC_ID attribute* TAG_EMPTY_CLOSE -> ^(ELEMENT GENERIC_ID attribute*)
    ;
